; ModuleID = '/home/carl/AnghaBench/freebsd/tools/regression/aio/aiop/extr_aiop.c_choose_aio.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/regression/aio/aiop/extr_aiop.c_choose_aio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IOT_READ = common dso_local global i64 0, align 8
@IOT_WRITE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64)* @choose_aio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @choose_aio(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* %3, align 8
  %5 = load i64, i64* @IOT_READ, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i64, i64* @IOT_READ, align 8
  store i64 %8, i64* %2, align 8
  br label %26

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* @IOT_WRITE, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %9
  %14 = load i64, i64* @IOT_WRITE, align 8
  store i64 %14, i64* %2, align 8
  br label %26

15:                                               ; preds = %9
  br label %16

16:                                               ; preds = %15
  %17 = call i32 (...) @random()
  %18 = and i32 %17, 1
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %16
  %21 = load i64, i64* @IOT_READ, align 8
  br label %24

22:                                               ; preds = %16
  %23 = load i64, i64* @IOT_WRITE, align 8
  br label %24

24:                                               ; preds = %22, %20
  %25 = phi i64 [ %21, %20 ], [ %23, %22 ]
  store i64 %25, i64* %2, align 8
  br label %26

26:                                               ; preds = %24, %13, %7
  %27 = load i64, i64* %2, align 8
  ret i64 %27
}

declare dso_local i32 @random(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
